<resources>
    <string name="app_name">Learn Swiping</string>
    <string name="title_home">Home</string>
    <string name="title_study">Study</string>
    <string name="title_exam">Exam</string>

    <!-- APP WIDE STRINGS -->
    <string name="global_dialog_positive">OK</string>
    <string name="global_dialog_negative">Cancel</string>
    <string name="global_generic_error">Something went wrong</string>

    <!--  Auth  -->
    <string name="auth_btn_login">Login</string>
    <string name="auth_btn_sign_up">Create account</string>
    <string name="auth_btn_login_google">Google</string>

    <string name="auth_txt_username">Username</string>
    <string name="auth_txt_password">Password</string>
    <string name="auth_txt_email">Email</string>
    <string name="auth_txt_name">Name</string>

    <string name="auth_signup_txt_account_creation">Sign-up</string>
    <string name="auth_signup_btn_sign_up">Create</string>
    <string name="auth_signup_btn_go_back_login">Go back to login</string>

    <string name="auth_alert_login_ok">Logging as</string>
    <string name="auth_alert_sign_up_ok">Account created successfully</string>

    <string name="title_account">Account</string>
    <string name="acc_cnt_desc_profile_pic">profile picture</string>
    <string name="auth_btn_logout">Log out</string>
    <string name="home_txt_title_decks">Decks</string>
    <string name="home_ctn_desc_fab_add_deck">Add deck</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deck_editor_txt_title">Title</string>
    <string name="deck_editor_txt_description">Description</string>
    <string name="deck_editor_txt_screen_title_create">Create a deck</string>
    <string name="deck_editor_txt_screen_title_edit">Edit deck</string>
    <string name="home_img_cnt_desc_deck_picture">Picture of the deck</string>
    <string name="home_toast_unsubscribe_error">Unable to unsubscribe from</string>
    <string name="home_toast_subscribe_error">Unable to subscribe to</string>
    <string name="deck_editor_btn_upload_pic">Upload a pic</string>
    <string name="deck_editor_chb_public">Make public</string>
    <string name="deck_editor_btn_save">Save</string>
    <string name="deck_editor_btn_back">Go back</string>
    <string name="deck_editor_toast_image_error">There was an error while uploading the photo</string>
    <string name="deck_editor_toast_save_error">There was an error while saving the deck</string>
    <string name="deck_editor_toast_title_empty">There must be a title</string>
    <string name="owned_decks_toast_subscribe_error">Unable to subscribe to</string>
    <string name="owned_decks_toast_delete_error">Unable to delete</string>
    <string name="menu_item_deck_subscribe">Subscribe</string>
    <string name="menu_item_deck_unsubscribe">Unsubscribe</string>
    <string name="menu_item_deck_delete">Delete</string>
    <string name="menu_item_deck_select">Select</string>
    <string name="menu_item_deck_details">Details</string>
    <string name="account_tab_item_account">Account</string>
    <string name="account_tab_item_stats">Stats</string>
    <string name="account_tab_item_decks">Decks</string>
    <string name="account_txt_title_stats">Stats</string>
    <string name="deck_details_btn_subscribe">Subscribe</string>
    <string name="deck_details_btn_unsubscribe">Unsubscribe</string>
    <string name="menu_item_card_edit">Edit</string>

</resources>