<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="es.ignaciofp.learnswiping.ui.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_deckEditorFragment"
            app:destination="@id/deckEditorFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_study"
        android:name="es.ignaciofp.learnswiping.ui.home.fragments.StudyFragment"
        android:label="@string/title_study"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_exam"
        android:name="es.ignaciofp.learnswiping.ui.home.fragments.ExamFragment"
        android:label="@string/title_exam"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="es.ignaciofp.learnswiping.ui.home.fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"
        />
    <fragment
        android:id="@+id/deckEditorFragment"
        android:name="es.ignaciofp.learnswiping.ui.home.fragments.DeckEditorFragment"
        android:label="fragment_deck_editor"
        tools:layout="@layout/fragment_deck_editor" >
        <action
            android:id="@+id/action_deckEditorFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>