<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.auth.fragments.LoginFragment">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/form_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:id="@+id/txtLayUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/ic_account"
            app:helperTextTextAppearance="@style/TextAppearance.Material3.BodySmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_txt_username"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_txt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_btn_login"
        app:icon="@drawable/ic_login"
        app:layout_constraintBottom_toTopOf="@+id/google_login_btn"
        app:layout_constraintStart_toStartOf="@+id/google_login_btn" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:id="@+id/google_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_btn_login_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintBottom_toTopOf="@id/go_sign_up_btn"
        app:layout_constraintStart_toStartOf="@id/go_sign_up_btn"
        />

    <Button
        android:id="@+id/go_sign_up_btn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>